--- a/xcms-preprocessing.org
+++ b/xcms-preprocessing.org
@@ -390,7 +390,7 @@ the centroided data as mzML files and read the exported data again.
 #+END_SRC
 
 #+NAME: export-centroided
-#+BEGIN_SRC R :ravel message = FALSE
+#+BEGIN_SRC R :ravel message = FALSE, warning = FALSE
   ## Write the centroided data to files with the same names in the current
   ## directory
   fls_new <- basename(fileNames(data))
@@ -527,7 +527,7 @@ optional =rt= and =mz= parameters, allows to extract identified chromatographic
 peaks from specific areas in the data.
 
 #+NAME: xcmsnexp
-#+BEGIN_SRC R :ravel message = FALSE, results = "hide"
+#+BEGIN_SRC R :ravel message = FALSE
   ## Access the peak detection results from a specific m/z - rt area
   chromPeaks(data_cent, mz = c(106, 107), rt = c(150, 190))
 #+END_SRC
@@ -565,32 +565,31 @@ files of our toy data set to visualize these differences.
 #+END_SRC
 
 While both samples were measured with the same setup on the same day there are
-differences visible.
-
-While a large number of methods have been published
-\cite{Smith:2013gr} 
+still differences observable in the BPCs above.
 
 Alignment can be performed in =xcms= with the =adjustRtime= function that supports
 the /peakGroups/ \cite{Smith:2006ic} and the /obiwarp/ \cite{Prince:2006jj}
 method. The settings for the algorithms can be defined with the =PeakGroupsParam=
-and the =ObiwarpParam= parameter objects, respectively. In our example we use the
-peakGroups method that aligns samples based on the retention times of /hook
-peaks/, that are supposed to be present in most samples. For this approach we
-need to identify these hook peaks first, for which we employ the /peakDensity/
-correspondence analysis method. Details about this correspondence method and
-explanations on the choices for its parameters are provided in the next
-section. After having performed an initial correspondence analysis that defined
-features (i.e. grouped chromatographic peaks across samples), we perform the
-alignment using the settings =minFraction = 1= and =span = 0.6=. =minFraction= defines
-the proportion of samples in which a feature has to be detected/present. A value
-of 0.9 would e.g. require that a chromatographic peak was detected in 90% of all
-samples of the experiment. Our data represents replicated measurements of the
-same sample pool and we can thus assume that for hook peaks a peak was
-identified in all files. The parameter =span= defines the degree of smoothing of
-the loess function that is used to allow different regions along the retention
-time axis to be adjusted by a different factor. A value of 0 will most likely
-cause an overfitting, while 1 would perform a linear regression. Values between
-0.4 and 0.6 seem to be reasonable for most experiments.
+and the =ObiwarpParam= parameter objects, respectively.
+
+For our example we use the peakGroups method that aligns samples based on the
+retention times of /hook peaks/, that are supposed to be present in most
+samples. For this approach we need to identify these hook peaks first, for which
+we employ the /peakDensity/ correspondence analysis method. Details about this
+correspondence method and explanations on the choices for its parameters are
+provided in the next section. After having performed an initial correspondence
+analysis that defined features (i.e. grouped chromatographic peaks across
+samples), we perform the alignment using the settings =minFraction = 1= and =span =
+0.6=. =minFraction= defines the proportion of samples in which a feature has to be
+detected/present. A value of 0.9 would e.g. require that a chromatographic peak
+was detected in 90% of all samples of the experiment. Our data represents
+replicated measurements of the same sample pool and we can thus assume that for
+hook peaks a peak was identified in all files. The parameter =span= defines the
+degree of smoothing of the loess function that is used to allow different
+regions along the retention time axis to be adjusted by a different factor. A
+value of 0 will most likely cause an overfitting, while 1 would perform a linear
+regression. Values between 0.4 and 0.6 seem to be reasonable for most
+experiments.
 
 #+NAME: alignment-correspondence
 #+BEGIN_SRC R :ravel message = FALSE
@@ -648,10 +647,11 @@ compounds. We thus below plot the XIC for Serine before and after alignment.
 		    rt = c(179, 186)))
 #+END_SRC
 
-The Serine peaks are nicely aligned after adjustment. Note that if we were not
-happy with the alignment results we could simply retry with different settings
-after removing them with the =dropAdjustedRtime= function. This function restores
-also the original retention times of the identified chromatographic peaks.
+The Serine peaks are also nicely aligned after adjustment. Note that if we were
+not happy with the alignment results we could simply retry with different
+settings after removing old results with the =dropAdjustedRtime= function. This
+function restores also the original retention times of the identified
+chromatographic peaks.
 
 *** Correspondence
 
@@ -875,7 +875,8 @@ first preprocessing step.
 + The new data objects and functions are aimed to simplify data access and
   inspection of results and should facilitate data set-dependent definition of
   algorithm parameters.
-+ More work to come for the analysis of chromatographic data (SRM/MRM).
++ More work to come for the analysis of chromatographic data (SRM/MRM) and
+  eventually for data normalization.
 
 * References
 
